<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/classic_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassicGame">

    <TextView
        android:id="@+id/numberHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/userInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_placeholder"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/numberHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintTop_toBottomOf="@id/userInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/hintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetButton" />


    <TextView
        android:id="@+id/hintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/hintButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/submit_for_computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/hintText"
        android:visibility="gone">

        <EditText
            android:id="@+id/provide_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/provide_answer_placeholder"
            android:layout_weight="7"/>
        <Button
            android:id="@+id/submitButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/computer_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/submit_for_computer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>